# GStreamerTutorial

./: CMakeLists.txt  main.cpp
MyTransform/: CMakeLists.txt  gstmytransform.c  gstmytransform.h  mytransform.pc.in
